--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,12 @@ body {
   background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+}
+
+.logo {
+  background-image: url(../img/logo.png);
+  height: 50px;
 }
 
 #page-public {
