--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
     position: relative;
     margin: 0;
     height: 100%;
-    background: linear-gradient(steelblue, beige);
+    background: linear-gradient(#a75c9c, #639ac5);
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     text-align: center;
@@ -59,7 +59,7 @@ body {
     position: absolute;
     bottom:20px; right:30%;
     height:220px; width:6px;
-    background: steelblue;
+    background: yellow;
     border-radius: 0 6px 0 0;
     transform: rotate(-18.5deg);
     transform-origin: left bottom;
@@ -108,7 +108,7 @@ body {
 #coaster {
     width: 130%; height: 4px;
     margin-left: -15%;
-    background: steelblue;
+    background: #fff;
     border-radius: 2px;
 }
 
@@ -116,7 +116,7 @@ footer {
     position: absolute;
     left:0; top:50%; right:0;
     margin-top: 120px;
-    color: steelblue;
+    color: #fff;
 }
 
 /* */
@@ -125,20 +125,41 @@ footer {
   width: 100%;
   height: 100vh;
   padding-top: 40vh;
-  background: -moz-linear-gradient(#530060,#c90881);
-  background: -webkit-linear-gradient(#530060, #c90881);
-  background: -o-linear-gradient(#530060, #c90881);
-  background: linear-gradient(#530060, #c90881);
+  background: -moz-linear-gradient(#a75c9c, #639ac5)
+  background: -webkit-linear-gradient(#a75c9c, #639ac5);
+  background: -o-linear-gradient(#a75c9c, #639ac5);
+  background: linear-gradient(#a75c9c, #639ac5);
   color: white;
 }
 
 #page_1 {
   width: 100%;
   height: 100vh;
-  padding-top: 10vh;
-  background: -moz-linear-gradient(#530060,#c90881);
-  background: -webkit-linear-gradient(#530060, #c90881);
-  background: -o-linear-gradient(#530060, #c90881);
-  background: linear-gradient(#530060, #c90881);
+  padding-top: 4vh;
+  background: -moz-linear-gradient(#a75c9c, #639ac5)
+  background: -webkit-linear-gradient(#a75c9c, #639ac5);
+  background: -o-linear-gradient(#a75c9c, #639ac5);
+  background: linear-gradient(#a75c9c, #639ac5);
   color: white;
 }
+
+.drinks-home {
+  width: 100%;
+  height: 240px;
+  background-image: url('../img/drinks-home.jpg');
+  background-repeat: repeat-x;
+}
+
+.logo {
+  padding: 1em 0;
+}
+
+.buttons-home {
+  padding: 1em 0;
+}
+
+.btn-register, .btn-login {
+  background-color: #fff;
+  border: 1px solid #8f72ab;
+}
+
